# Project-Stardust

./: .gitignore  LICENSE  README.md  run.ps1
Orchestrator/: .env  stardust.py
stardust/: Cargo.toml  linker.ld
stardust/.cargo/: config.toml
stardust/src/: main.rs  oracle.rs  smp.rs
stardust/src/arch/: mod.rs
stardust/src/arch/x86_64/: apic.rs  cpu.rs  gdt.rs  idt.rs  iommu.rs  mod.rs  syscall.rs
stardust/src/hal/: cpu.rs  display.rs  mod.rs
stardust/src/memory/: frame.rs  mapper.rs  mod.rs  paging.rs  physical.rs  shared.rs
stardust/src/security/: cdt.rs  mod.rs  token.rs
stardust/src/task/: context.rs  elf.rs  loader.rs  mod.rs  process.rs  scheduler.rs  thread.rs
userland/apps/test_app/: Cargo.toml
userland/apps/test_app/src/: lib.rs
userland/drivers/gpu_driver/: Cargo.toml  linker.ld
userland/drivers/gpu_driver/.cargo/: config.toml
userland/drivers/gpu_driver/src/: main.rs
userland/drivers/ps2_hid/: Cargo.toml  linker.ld
userland/drivers/ps2_hid/.cargo/: config.toml
userland/drivers/ps2_hid/src/: main.rs
userland/libs/libstardust/: Cargo.toml
userland/libs/libstardust/src/: allocator.rs  elf.rs  lib.rs  tar.rs
userland/marshal/: Cargo.toml  linker.ld
userland/marshal/.cargo/: config.toml
userland/marshal/src/: main.rs
